// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Input component  should match the snapshot 1`] = `
<div
  className="FieldGroup-sc-1ksesv8-0 jFrSKp"
>
  
  <div
    aria-expanded={false}
    aria-haspopup="listbox"
    aria-labelledby="dropdown-label"
    aria-owns={null}
    role="combobox"
  >
    <button
      aria-haspopup={true}
      aria-label="open menu"
      className="Dropdown__DropdownButton-sc-13n1lji-0 gJatwz"
      data-toggle={true}
      name="Dropdown"
      onBlur={[Function]}
      onClick={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      role="button"
      type="button"
    >
      Selecione
      <span
        aria-hidden="true"
        className="material-icons MuiIcon-root-1 Dropdown__ArrowDown-sc-13n1lji-1 jxCBkG"
        style={
          Object {
            "color": "#93a3ad",
          }
        }
      >
        arrow_drop_down
      </span>
    </button>
  </div>
  
</div>
`;

exports[`Input component  with a label should match the snapshot 1`] = `
<div
  className="FieldGroup-sc-1ksesv8-0 jFrSKp"
>
  <label
    className="Label-inke2y-0 gpnWva"
    htmlFor="dropdown"
  >
     
    Text label
     
  </label>
  <div
    aria-expanded={false}
    aria-haspopup="listbox"
    aria-labelledby="dropdown-label"
    aria-owns={null}
    role="combobox"
  >
    <button
      aria-haspopup={true}
      aria-label="open menu"
      className="Dropdown__DropdownButton-sc-13n1lji-0 gJatwz"
      data-toggle={true}
      name="Dropdown"
      onBlur={[Function]}
      onClick={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      role="button"
      type="button"
    >
      Selecione
      <span
        aria-hidden="true"
        className="material-icons MuiIcon-root-1 Dropdown__ArrowDown-sc-13n1lji-1 jxCBkG"
        style={
          Object {
            "color": "#93a3ad",
          }
        }
      >
        arrow_drop_down
      </span>
    </button>
  </div>
  
</div>
`;

exports[`Input component  with an error message should match the snapshot 1`] = `
<div
  className="FieldGroup-sc-1ksesv8-0 jFrSKp"
>
  
  <div
    aria-expanded={false}
    aria-haspopup="listbox"
    aria-labelledby="dropdown-label"
    aria-owns={null}
    role="combobox"
  >
    <button
      aria-haspopup={true}
      aria-label="open menu"
      className="Dropdown__DropdownButton-sc-13n1lji-0 gJatwz"
      data-toggle={true}
      name="Dropdown"
      onBlur={[Function]}
      onClick={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      role="button"
      type="button"
    >
      Selecione
      <span
        aria-hidden="true"
        className="material-icons MuiIcon-root-1 Dropdown__ArrowDown-sc-13n1lji-1 jxCBkG"
        style={
          Object {
            "color": "#93a3ad",
          }
        }
      >
        arrow_drop_down
      </span>
    </button>
  </div>
  <div
    className="ErrorMessage-o8xm0w-0 cMosjL"
  >
    Error message
  </div>
</div>
`;

exports[`Input component  with items should match the snapshot 1`] = `
<div
  className="FieldGroup-sc-1ksesv8-0 jFrSKp"
>
  
  <div
    aria-expanded={false}
    aria-haspopup="listbox"
    aria-labelledby="dropdown-label"
    aria-owns={null}
    role="combobox"
  >
    <button
      aria-haspopup={true}
      aria-label="open menu"
      className="Dropdown__DropdownButton-sc-13n1lji-0 gJatwz"
      data-toggle={true}
      name="Dropdown"
      onBlur={[Function]}
      onClick={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      role="button"
      type="button"
    >
      Selecione
      <span
        aria-hidden="true"
        className="material-icons MuiIcon-root-1 Dropdown__ArrowDown-sc-13n1lji-1 jxCBkG"
        style={
          Object {
            "color": "#93a3ad",
          }
        }
      >
        arrow_drop_down
      </span>
    </button>
  </div>
  
</div>
`;
